sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:3: error: not found: value l
  l=getValueCount()
  ^AlgInsertionSort:4: error: not found: value l
  for (i <- 1 to l-1){
                 ^AlgInsertionSort:5: error: not found: value v
    v=getValue(i)
    ^AlgInsertionSort:6: error: not found: value l
  	for (j <- 1 to l-2){
                       ^AlgInsertionSort:7: error: not found: value v
    	if(getValue(i-j-1)>v){
                           ^AlgInsertionSort:8: error: missing arguments for method getValue in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
    		getValue(i-j)=getValue(i-j-1)
                ^