sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  l=getValueCount()
  for (i <- 1 to l-1){
    v=getValue(i)
  	for (j <- 1 to l-2){
    	if(getValue(i-j-1)>v){
    		getValue(i-j)=getValue(i-j-1)
    	}
    }
   }
}